...
            if (alarms.count < 3) {
                NavigationLink(
                    destination: AlarmCreate(),
                    label: {
                        Text("New Alarms")
                        }
                ).accessibilityIdentifier("createAlarmButton")
            }
            
        }
        .onAppear(perform: {
            populateAlarms()
            setupTimer()
...
